[tool.poetry]
name = "httpcord"
version = "0.1.9"
description = "A Python Discord Interaction bot API wrapper."
authors = ["Isabelle Phoebe <izzy@uwu.gal>"]
license = "MIT"
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/Isabe1le/pyhttpcord"
"Bug Tracker" = "https://github.com/Isabe1le/pyhttpcord/issues"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | mongo-data
  | _build
  | buck-out
  | build
  | dist
)/
'''

[project]
dependencies = [
  "fastapi",
  "PyNaCl",
  "uvicorn",
  "aiohttp",
  "python-dateutil",
]